fix nav bar spacing adjustment

--- a/assets/css/category.css
+++ b/assets/css/category.css
@@ -39,6 +39,7 @@ body {
 .nav-link {
 	text-decoration: none;
 	color: white;
+	margin-left: 20px;
 }
 
 .nav-icon {
